--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -119,10 +119,7 @@ $btn-w: get($component-size, "small");
   from {
     max-width: 0;
   }
-  50% {
-    max-width: 65px;
-  }
-  100% {
+  to {
     max-width: 138px;
   }
 }
@@ -151,7 +148,6 @@ $btn-w: get($component-size, "small");
     top: 0;
 
     z-index: 1;
-    // opacity: 0;
 
     left: 380px;
     right: 160px;
@@ -164,10 +160,9 @@ $btn-w: get($component-size, "small");
 
   [data-type="wnd"].layout__wnd--active {
     > .fn__flex:first-child {
-      // opacity: 1;
       z-index: 2;
-      -webkit-app-region: drag;
     }
+
     .item {
       -webkit-app-region: no-drag;
       &--readonly {
@@ -191,7 +186,8 @@ $btn-w: get($component-size, "small");
 
     .item {
       @include item-tran("base", $important: true);
-      animation: item-w 0.2s ease-in-out;
+      animation: item-w get($transition-duration, "base")
+        get($transition-function, "ease-in-out");
       height: $item-h;
       position: relative;
       padding: 0 $item-pad;
