fix: :bug: 修复搜索界面右下角圆角

--- a/styles/dialog/search.scss
+++ b/styles/dialog/search.scss
@@ -39,6 +39,7 @@ $form-h: $btn-h + $padding * 2 + 1px;
       }
       .fn__flex-column[style*="70vh"] {
         height: 80vh !important;
+        border-radius: big.$dialog-radius !important;
       }
     }
 
