fix: :bug: 优化块元信息样式

--- a/styles/common/utils.scss
+++ b/styles/common/utils.scss
@@ -23,10 +23,10 @@
   left: unset;
 }
 
-@mixin v-center($h) {
-  height: $h;
-  line-height: $h;
-  vertical-align: middle;
+@mixin v-center($h, $important: false) {
+  height: $h is-important($important);
+  line-height: $h is-important($important);
+  vertical-align: middle is-important($important);
 }
 
 @mixin center {
