fix: :bug: 目前分屏页签栏的最佳解决方案

--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -158,18 +158,33 @@ $btn-w: get($component-size, "small");
     }
   }
 
-  [data-type="wnd"].layout__wnd--active {
-    > .fn__flex:first-child {
-      z-index: 2;
+  // 解决分屏
+  &:has(.layout__resize--lr) {
+    // 分屏后左侧页签栏
+    > .fn__flex:first-child > [data-type="wnd"] > .fn__flex:first-child {
+      right: 50vw;
     }
-
-    .item {
-      -webkit-app-region: no-drag;
-      &--readonly {
-        -webkit-app-region: drag;
-        .item__close {
-          -webkit-app-region: no-drag;
+    > .layout__resize--lr + .fn__flex {
+      // 分屏后右侧页签栏
+      > [data-type="wnd"] > .fn__flex:first-child {
+        left: 50vw;
+      }
+      // 分屏后右侧聚焦窗口页签栏
+      > [data-type="wnd"].layout__wnd--active {
+        > .fn__flex:first-child {
+          z-index: 2;
         }
+      }
+    }
+  }
+  
+  // 解决拖拽
+  .item {
+    -webkit-app-region: no-drag;
+    &--readonly {
+      -webkit-app-region: drag;
+      .item__close {
+        -webkit-app-region: no-drag;
       }
     }
   }
