--- a/styles/layout/tab-bar.scss
+++ b/styles/layout/tab-bar.scss
@@ -177,17 +177,17 @@ $btn-w: get($component-size, "small");
       }
     }
   }
-  
+
   // 解决拖拽
-  .item {
-    -webkit-app-region: no-drag;
-    &--readonly {
-      -webkit-app-region: drag;
-      .item__close {
-        -webkit-app-region: no-drag;
-      }
-    }
-  }
+  // .item {
+  //   -webkit-app-region: no-drag;
+  //   &--readonly {
+  //     -webkit-app-region: drag;
+  //     .item__close {
+  //       -webkit-app-region: no-drag;
+  //     }
+  //   }
+  // }
 
   .layout-tab-bar {
     height: top-bar.$bar-h !important;
@@ -197,6 +197,7 @@ $btn-w: get($component-size, "small");
 
     &--readonly {
       min-width: $btn-w * 2 + $fn-space * 3 + $interval * 2 + 2px;
+      -webkit-app-region: drag;
     }
 
     .item {
@@ -278,6 +279,7 @@ $btn-w: get($component-size, "small");
 
         .item__close {
           @include item("base", $important: true);
+          -webkit-app-region: no-drag;
         }
       }
     }
