fix: :bug: 修复编辑区域页面抖动的问题

--- a/styles/protyle/wysiwyg.scss
+++ b/styles/protyle/wysiwyg.scss
@@ -21,6 +21,8 @@ $item-pad: 3px 2px;
     }
 
     .layout__center &:not([data-fullwidth="true"]) {
+      overflow-y: scroll;
+      
       .protyle {
         &-background {
           &__iconw {
