fix: :bug: 修复菜单项位于顶栏位置时无法点击的问题

--- a/styles/component/menu.scss
+++ b/styles/component/menu.scss
@@ -24,6 +24,8 @@ $padding: 6px;
 @mixin menu-item {
   min-width: 0px;
   margin-bottom: 4px;
+  -webkit-app-region: no-drag;
+
   @include item("pop");
   @include component-base();
   &:last-child {
