fix: :bug: 修复块引用菜单输入框的样式问题

--- a/styles/protyle/hint.scss
+++ b/styles/protyle/hint.scss
@@ -69,4 +69,11 @@
       @include menu.color-square(list.$text-h, 16px, 11px);
     }
   }
+
+  // 菜单输入框
+  .b3-text-field {
+    width: 100%;
+    margin: 0 !important;
+    background-color: get($bg, "pop", 2);
+  }
 }
