--- a/styles/layout/wnd.scss
+++ b/styles/layout/wnd.scss
@@ -3,6 +3,7 @@
 @use "../component/list";
 @use "top-bar";
 @use "dock";
+@use "status";
 
 $wnd-base: get($bg, "base", 1);
 $wnd-bg: get($bg, "page", 1);
@@ -64,6 +65,13 @@ $wnd-transition: all $time $func 0s;
 
       > div[data-type="wnd"] {
         @include wnd;
+      }
+
+      &:has(+ .layout__resize.fn__none),
+      &:last-child {
+        > [data-type="wnd"] {
+          padding-bottom: status.$s-h - $interval;
+        }
       }
     }
 
