fix: :bug: 修复行内标签块换行问题
link #60

--- a/styles/protyle/inline/tag.scss
+++ b/styles/protyle/inline/tag.scss
@@ -10,6 +10,7 @@ $tag-color: get($text, "secondary");
 .protyle-wysiwyg [data-node-id] {
   span[data-type~="tag"] {
     @include item-focus();
+    white-space: nowrap;
     border-radius: get($radius, "max");
     border: none;
     position: relative;
