--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -16,7 +16,7 @@ $icon-w: get($icon, "medium");
 $win-control-w: 46px;
 
 $icons-w-left: ($item-w + 4px) * 6;
-$icons-w-right: ($item-w + 4px) * 4 + $win-control-w * 3 - dock.$dock-w + $interval;
+$icons-w-right: ($item-w + 4px) * 4 + $win-control-w * 3 - dock.$dock-w;
 
 $mac-pad-right: 3px;
 
